--- a/Lumo/Views/Account/Manage.cshtml
+++ b/Lumo/Views/Account/Manage.cshtml
@@ -7,7 +7,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow">
-                <div class="card-header bg-main text-white py-3">
+                <div class="card-header bg-primary text-white py-3">
                     <h4 class="mb-0"><i class="bi bi-person-gear"></i> Account Settings</h4>
                 </div>
                 <div class="card-body p-4">
